# RepoPulse

./: .gitignore
backend/: CMakeLists.txt
backend/config/: analysis_rules.json
backend/src/: main.cpp
backend/src/analyzers/base/: analysis_result.h  analyzer_interface.h
backend/src/analyzers/cpp/: analysis_engine.cpp  complexity_analyzer.cpp  complexity_analyzer.h  cpp_analyzer.cpp  cpp_analyzer.h  smell_detector.cpp  smell_detector.h
backend/src/core/: analyzer_registry.cpp  analyzer_registry.h  file_utils.cpp  file_utils.h  repository_scanner.cpp  repository_scanner.h
backend/src/metrics/: function_metrics.cpp  function_metrics.h  loc_counter.cpp  loc_counter.h
backend/src/report/: json_reporter.cpp  json_reporter.h  report_generator.cpp  report_generator.h
backend/src/scoring/: health_score.cpp  health_score.h
backend/tests/: analyzer_tests.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: analysis_report.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AISuggestions.jsx  CommitActivityChart.jsx  ComplexityChart.jsx  DependencyGraph.jsx  FileColorTree.jsx  GitHubInput.jsx  HealthScoreCard.jsx  InsightsPanel.jsx  LanguageBreakdown.jsx  LastAnalyzed.jsx  Navbar.jsx  PrintReport.jsx  QualityGrade.jsx  RepoOverview.jsx  RiskFilesTable.jsx  RiskHeatmap.jsx  SmellsPieChart.jsx  SummaryBanner.jsx  TopFunctions.jsx  TrendChart.jsx
frontend/src/context/: PaletteContext.jsx  (+1 more)
reports/: analysis_report.json
scripts/: analyze_github.sh  run_analysis.sh  server.py
(+17 files in other folders)
